# IUST_Quadruped_software

./: CMakeLists.txt
js_test/: CMakeLists.txt  js_test_main.cpp
robot/include/rt/: rt_joystick_interface.h
robot/src/: HardwareBridge.cpp  RobotRunner.cpp  SimulationBridge.cpp
robot/src/rt/: rt_joystick_interface.cpp
user/MiLAB_Controller/FSM_States/: ControlFSM.cpp
